# proofofputt-web

./: .gitignore  README.md  app.html  download.html  package-lock.json  package.json  requirements.txt  vercel-requirements.txt  vercel.json
.github/workflows/: neon_workflow.yml
api/: api.py  data_manager.py  db.js  duels.js  index.py  leaderboards.js  leagues.js  login.js  register.js  requirements.txt  session_reporter.py  sessions.js  simple-test.js  start-calibration.js  start-session.js  test-player.js
api/desktop/: status.js
api/duels/[duelId]/: respond.js
api/duels/list/: [playerId].js
api/leagues/: [leagueId].js
api/notifications/: [playerId].js
apps/api/: api.py  calibration.py  data_manager.py  notification_service.py  package.json  run_tracker.py  session_reporter.py  test_database.py  websocket_example.py  websocket_handler.py
apps/desktop/: .gitignore  README.md  package-lock.json  package.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/web/: DESIGN_SPEC.md  index.html  package-lock.json  package.json  vercel.json  vite.config.js
apps/web/src/: App.jsx  (+4 more)
assets/: charts-BKGTIQQb.js  index-sRzBjJpX.js  vendor-Dc_EL-L-.js
backend/: calibration.py  data_manager.py  putt_classifier.py  requirements.txt  utils.py  vercel.json  video_processor.py
frontend/: PlayerCareerPage.jsx  SettingsPage.jsx  frontend_handover_document.md  handover_document copy.md
frontend/webapp/: package-lock.json  package.json  vite.config.js
public/: index.html
public/app/: index.html
public/assets/: index-DJD0DnmU.css  markdown-_exnSXBd.js
(+102 files in other folders)
